Fixed x overflow on mobile view without the additional html property

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-html {
-  overflow-x: hidden;
-}
-
 body {
   margin: 0;
   padding: 0;
